# Korean_FA

./: .gitignore  README.ko.md  README.md  build.sh  fa_restapi_server.py  fa_server.py  forced_align.sh  path.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: engine-candidate.yml  engine-release.yml  package.yml
conf/: server.yaml
docker/: dockerfile
engine/: build_linux_x86_64.sh  verify_linux_x86_64.py
example/jap_files/: C1_F_01_A.txt  C1_F_01_B.txt  csj-0001-me-0001.txt  csj-0001-me-0002.txt  csj-0001-me-0003.txt  csj-0001-me-0004.txt  csj-0001-me-0005.txt
koreanfa/: __init__.py  aligner.py  api.py  audio.py  cli.py  engine.py  engine_manifest.json  errors.py  fa.py  language.py  resources.py  result.py
main/local/: adjust_float.py  fix_ctm_float.py  generate_textgrid.py
model/jap_model/: lexicon.txt  tree
model/kor_model/: lexicon.txt
runtime/config/: mfcc_hires.conf
runtime/pipeline/: adjust_float.py  check_text.py  evaluateFA.py  fix_ctm_float.py  g2p.py  generate_textgrid.py  main_fa.sh  main_jap_fa.sh  prepare_jap_new_lang.sh  prepare_new_lang.sh  run_japanese_g2p.sh  run_japanese_mecab.sh  segment_textgrid_audio.py  text4allwav.sh  textgrid_word2sent.py
src/conf/: mfcc_hires.conf
src/handlers/: AlignHandler.py  DaemonHandler.py  DataHandler.py  MainHandler.py  ServerHandler.py
src/local/: adjust_float.py  check_text.py  fa_prep_data.py  g2p.py  generate_textgrid.py  (+8 more)
tests/: test_aligner.py  test_api.py  test_cli.py  test_cli_engine_warning.py  test_engine.py  test_integration.py  test_language.py  test_resources.py
(+37 files in other folders)
