[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "koreanfa"
version = "0.3.0"
description = "Korean and Japanese forced alignment with a Python API and command-line interface"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "soundfile>=0.12",
    "soxr>=0.3",
]
license = "Apache-2.0"
license-files = ["license"]
authors = [{ name = "Hyungwon Yang" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
keywords = ["forced-alignment", "kaldi", "korean", "japanese", "textgrid", "speech"]

[project.urls]
Homepage = "https://github.com/hyung8758/Korean_FA"
Source = "https://github.com/hyung8758/Korean_FA"
Issues = "https://github.com/hyung8758/Korean_FA/issues"

[project.scripts]
koreanfa = "koreanfa.cli:main"

[tool.setuptools]
packages = ["koreanfa"]
include-package-data = true

[tool.setuptools.package-data]
koreanfa = ["engine_manifest.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
